styles.css
@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");

@font-face {
  font-family: "Hanson-Bold";
  src: url("./assets/fonts/Hanson-Bold.otf") format("opentype");
  /* font-weight: 400; */
  font-style: normal;
  font-display: swap;
}

:root {
  /* new primaries */
  /* Brand Colors */
  --primary: #98388a;
  --primary-container: #fe90e8;
  --primary-fixed: #ffd7f2;
  --primary-fixed-dim: #ffaceb;
  --inverse-primary: #ffaceb;

  --secondary: #745b00;
  --secondary-container: #ffd24d;
  --secondary-fixed: #ffe08d;
  --secondary-fixed-dim: #edc23d;

  --tertiary: #30666c;
  --tertiary-container: #89bfc6;
  --tertiary-fixed: #b5ecf3;
  --tertiary-fixed-dim: #9ad0d7;

  /* Surface */
  --background: #f9f9f9;
  --surface: #f9f9f9;
  --surface-dim: #dadada;
  --surface-bright: #f9f9f9;

  --surface-container-lowest: #ffffff;
  --surface-container-low: #f3f3f3;
  --surface-container: #eeeeee;
  --surface-container-high: #e8e8e8;
  --surface-container-highest: #e2e2e2;

  --surface-variant: #e2e2e2;
  --surface-tint: #98388a;

  /* Text */
  --on-primary: #ffffff;
  --on-primary-container: #7c1e71;
  --on-primary-fixed: #390034;
  --on-primary-fixed-variant: #7b1d70;

  --on-secondary: #ffffff;
  --on-secondary-container: #735a00;
  --on-secondary-fixed: #241a00;
  --on-secondary-fixed-variant: #584400;

  --on-tertiary: #ffffff;
  --on-tertiary-container: #134f55;
  --on-tertiary-fixed: #001f23;
  --on-tertiary-fixed-variant: #124e54;

  --on-background: #1a1c1c;
  --on-surface: #1a1c1c;
  --on-surface-variant: #52424d;

  --inverse-surface: #2f3131;
  --inverse-on-surface: #f1f1f1;

  /* Borders */
  --outline: #84727d;
  --outline-variant: #d6c1cd;

  /* Error */
  --error: #ba1a1a;
  --error-container: #ffdad6;
  --on-error: #ffffff;
  --on-error-container: #93000a;

  /* Utility / Accent Colors */
  --hover-text-pink: #fe90e8;

  --vivid-pink: #fe90e8;
  /* PRIMARY COLORS */
  --electric-blue: #00d1ff;
  --bright-yellow: #f7cb46;
  --acid-green: #99e385;
  --paper-white: #ffffff;
  --ink-black: #000000;

  --normal: #a8a878;
  --fire: #f08030;
  --water: #6890f0;
  --electric: #f8d030;
  --grass: #78c850;
  --ice: #98d8d8;
  --fighting: #c03028;
  --poison: #a040a0;
  --ground: #e0c068;
  --flying: #a890f0;
  --psychic: #f85888;
  --bug: #a8b820;
  --rock: #b8a038;
  --ghost: #705898;
  --dragon: #7038f8;
  --dark: #705848;
  --steel: #b8b8d0;
  --fairy: #ee99ac;
  --submit: #40dd40;
  /* sizing */
  --spacing-xs: 4px;
  --spacing-sm: 8px;
  --spacing-md: 16px;
  --spacing-lg: 24px;
  --spacing-xl: 32px;

  --font-size-sm: 16px;
  --font-size-md: 26px;
  --font-size-lg: 42px;
  --font-size-xl: 68px;
}
/* xs: 0,
sm: 576px,
md: 768px,
lg: 992px,
xl: 1200px,
xxl: 1400px */
.bg-normal {
  background-color: var(--normal);
}
.bg-fire {
  background-color: var(--fire);
}
.bg-water {
  background-color: var(--water);
}
.bg-electric {
  background-color: var(--electric);
}
.bg-grass {
  background-color: var(--grass);
}
.bg-ice {
  background-color: var(--ice);
}
.bg-fighting {
  background-color: var(--fighting);
}
.bg-poison {
  background-color: var(--poison);
}
.bg-ground {
  background-color: var(--ground);
}
.bg-flying {
  background-color: var(--flying);
}
.bg-psychic {
  background-color: var(--psychic);
}
.bg-bug {
  background-color: var(--bug);
}
.bg-rock {
  background-color: var(--rock);
}
.bg-ghost {
  background-color: var(--ghost);
}
.bg-dragon {
  background-color: var(--dragon);
}
.bg-dark {
  background-color: var(--dark);
}
.bg-steel {
  background-color: var(--steel);
}
.bg-fairy {
  background-color: var(--fairy);
}

html {
  font-size: 16px;
}
a {
  color: unset;
  text-decoration: none;
}

ul {
  list-style-type: none;
}

button {
  border: unset;
  background: unset;
}

body {
  background-image: url("./assets/dot-grid.webp");
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
.black-overlay {
  filter: brightness(0);
}
.container {
  width: 100%;
  margin-inline: auto;
}
.display-column {
  display: flex;
  flex-direction: column;
}

.header {
  width: 100%;
  background-color: var(--paper-white);
  box-shadow: 8px 4px 15px 0px rgba(0, 0, 0, 1);
  margin-bottom: 20px;
}

.header__inner {
  display: flex;
  flex-direction: column;
  padding: var(--spacing-md) var(--spacing-lg);
}

.header__top {
  display: flex;
  justify-content: space-between;
}

.header__title {
  font-size: 2rem;
  font-family: "Hanson-Bold";
}

.header__branding {
  display: flex;
  gap: var(--spacing-sm);
  align-items: center;
}

.header__menu-button {
  cursor: pointer;
}

.header__nav {
  max-height: 0;
  overflow: hidden;
}

.header__nav--expanded {
  max-height: 190px;
}

.header__nav-list {
  margin-top: var(--spacing-md);
  border-top: 3px solid #0000004e;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-lg);
  padding-top: var(--spacing-md);
  width: 100%;
}
.header__nav-link {
  font-family: "Sora";
  transition: all 0.35s ease-out;
  padding: var(--spacing-sm);
}

.header__nav-link--active {
  padding: 8px 8px 4px 8px;
  font-weight: bold;
}

.header__nav-link:hover {
  background-color: var(--primary-fixed-dim);
}

/* homepage__main */

.homepage__main {
}

h1 {
  display: flex;
  flex-direction: column;
  font-size: var(--font-size-xl);
  padding: var(--spacing-md);
}

.homepage__hero-bottom {
  margin-top: var(--spacing-md);
  background-color: var(--primary-container);
  transform: rotate(-3deg);
  box-shadow: 8px 4px 0px 0px rgba(0, 0, 0, 1);
  border: 5px solid black;
  padding: var(--spacing-md) var(--spacing-sm);
  width: fit-content;
}

.homepage__hero p {
  width: fit-content;
  font-weight: bold;
  margin: var(--spacing-lg);
  padding: var(--spacing-md) var(--spacing-lg);
  box-shadow: 8px 4px 0px 0px rgba(0, 0, 0, 1);
  border: 5px solid black;
  font-size: var(--font-size-md);
}
.homepage__hero-img {
  display: block;
  margin-inline: auto;
}

/* modules */

.modules__grid {
  display: grid;
  padding: var(--spacing-lg);
}

.modules__box {
  box-shadow: 8px 4px 0px 0px rgba(0, 0, 0, 1);
  border: 5px solid black;
  padding: var(--spacing-md);
}

/* xs: 0,
sm: 576px,
md: 768px,
lg: 992px,
xl: 1200px,
xxl: 1400px */
@media (width <= 991px) {
  .header__nav {
    transition: max-height 0.45s ease-out;
  }
}
@media (width >= 768px) {
  .container {
    max-width: 768px;
  }

  .header__inner {
    margin-inline: auto;
  }
}

@media (width >= 992px) {
  .container {
    max-width: 992px;
  }
  .homepage__hero {
    display: flex;
    justify-content: space-between;
  }
  .homepage__hero img {
  }

  .header__inner {
    flex-direction: row;
    justify-content: space-between;
  }

  .header__menu-button {
    display: none;
  }

  .header__nav {
    max-height: none;
    transition: none;
  }

  .header__nav-list {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--spacing-md);
    margin-top: 0;
    border-top: 0;
  }
}
@media (width >= 1200px) {
  .container {
    max-width: 1200px;
  }
}
@media (width >= 1400px) {
  .container {
    max-width: 1400px;
  }
}

